Added the description/instruction of the Adding styles section

--- a/React-Quickstart/addingstyles.css
+++ b/React-Quickstart/addingstyles.css
@@ -3,3 +3,6 @@
 .avatar {
   border-radius: 50%;
 }
+
+/* React does not prescribe how you add CSS files. In the simplest case, you'll add a <link> tag to your HTML. 
+If you use a build tool or a framework, consult its documentation to learn how to add a CSS file to your project. */
